Nevermind, last commit also ruined vertical scrollbars... Fixed now

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -47,9 +47,3 @@
         -moz-appearance:textfield;
     }
 }
-
-@layer utilities {
-    ::-webkit-scrollbar {
-        height: 0;
-    }
-}
